7 January 2008: Wouter
	- Fixup nsec3 tests, they need zonesdir: "." in conf files.
	  The tests pass.
	- configure default is --enable-nsec3. Noted that this takes 20% more
	  memory (for very large zones). Moved tests to test on commit.

3 December 2007: Matthijs
	- Fixup bug where data related files are looked up in the wrong
	  directory when chrooted with chrootdir ending with a slash.

26 November 2007: Matthijs
	- Fixup bug start nsd while already running: do not initialize server,
	  since it is already running. 

15 November 2007: Matthijs
	- Changed man pages format from mdoc to mansun, to support the Solaris OS. 
	- Better logging for nsd-notify (show 'broken' zone)

13 November 2007: Wouter
	- CREDITS and RELNOTES now in utf-8.

12 November 2007: Matthijs
	- Changed man pages according to bug 162. 

30 October 2007: Wouter
	- Fixup for skip after unknown deleted IXFR RR, otherwise processing
	  would continue at the wrong spot in the packet and process the IXFR
	  as if it were malformed.
	- added unit test for this in long (needs ldns-testns, updated it).
	- added unit test for rollback of malformed zone transfers.
	  Fixup for it, and fixup in ldns-testns to be randomport and
	  copy id for hex packets.

29 October 2007: Wouter
	- Fixup bug where malformed IXFR replies cause partial processing in
	  reload (or nsd-patch or nsd-startup). One result is multiple SOA
	  records in zone apex. Fixup rolls back the zone
	  transfer, and waits for NSD to try to load again.

26  October 2008: Wouter
	- small fix in descriptive text in sample config for debug-mode.

9 October 2007: Mark
	- Change default location of: nsd.db, ixfr.db & xfrd.state to
	  /var/db/nsd.

5 October 2007: Wouter
	- Fixup manual page entry for allow AXFR to anyone.

3 August 2007: Mark
	- Report source and zone for denied AXFR attempts.

25 July 2007: Wouter
	- bind2nsd to 0.5.0, fixup of includes, key{} handling.

19 July 2007: Wouter
	- bind2nsd to 0.4.8, fixup of include bug.
